--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ title: Home Dandoeng
 
 <div class="home" id="home">
   <h2 class="pageTitle">Recent Posts</h2>
-  <ul class="posts noList">
+  <p>Sorry this page is currently under maintenance</p>
+<!--   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
         <span class="date">{{ post.date | date: '%B %d, %Y' }}</span>
@@ -13,14 +14,14 @@ title: Home Dandoeng
         <p>{% if post.description %}{{ post.description }}{% else %}{{ post.excerpt | strip_html }}{% endif %}</p>
       </li>
     {% endfor %}
-  </ul>
+  </ul> -->
   <!-- Pagination links -->
-  <div class="pagination">
+<!--   <div class="pagination">
     {% if paginator.previous_page %}
       <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="previous button__outline">Newer Posts</a> 
     {% endif %}
     {% if paginator.next_page %}
       <a href="{{ paginator.next_page_path | prepend: site.baseurl }}" class="next button__outline">Older Posts</a>
     {% endif %}
-  </div>
+  </div> -->
 </div>
